[package]
name = "x11rb_wgpu_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
sysinfo = { version = "0.37.2", features = ["multithread"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
libc = "0.2.185"
log = "0.4.29"

x11rb = { version = "0.13.2", features = ["allow-unsafe-code"] }
wgpu = "29.0.1"
raw-window-handle = "0.6.2"
pollster = "0.4.0"
