[package]
name = "x11rb_wgpu_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
sysinfo = { version = "0.39.6", features = ["multithread"] }
xbar_core = { git = "https://github.com/beamiter/xbar_core.git" }
shared_structures = { git = "https://github.com/beamiter/shared_structures.git", features = ["use-futex"] }
libc = "0.2.186"
log = "0.4.33"

x11rb = { version = "0.13.2", features = ["allow-unsafe-code"] }
wgpu = "30.0.0"
raw-window-handle = "0.6.2"
pollster = "1.0.1"
